Don't preload pages if the generator is not Threaded

BUG: 318048
FIXED-IN: 4.10.5